<resources>
    <string name="app_name">My city</string>
    <string name="news">Определился чемпион Кыргызстана по волейболу</string>
    <string name="weather">15 C</string>
    <string name="phone">+996 (700) 00-00-00</string>
    <string name="time">02:57</string>
    <string name="code">Введите код, чтобы авторизоваться</string>
    <string name="sms">Подтверждение СМС кода с номера</string>
    <string name="askagain">Перезапросить код повторно</string>
    <string name="name">Имя пользователя</string>
    <string name="Email">Электронная почта</string>
    <string name="Number">Номер</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="Open_map">Открыть карту</string>
    <string name="House_Number">Номер дома</string>
    <string name="Adress">Адрес</string>
    <string name="write_massage">Введите сообщение</string>
    <string name="send_message">Отправить обращение</string>
    <string name="massage">Обращения</string>
    <string name="My_massages">Мои обращения</string>
    <string name="In_process">В процессе</string>
    <string name="names">Наименования</string>
    <string name="today_10.10">Сегодня 10:10</string>
    <string name="today_17_17">Сегодня 17:17</string>
    <string name="today_20_08">Сегодня 22:08</string>
    <string name="today_21_21">Сегодня 21:21</string>
    <string name="hello">Добро пожаловать!</string>
    <string name="registr">Зарегистрироваться</string>
    <string name="password">пароль</string>
    <string name="number">номер телефона</string>
    <string name="passwordcheck">подтверждение пароля</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="settings">Настройки</string>
    <string name="register">Зарегистрироваться</string>
    <string name="cmon">В обработке</string>
    <string name="done">Рассмотрен</string>
    <string name="voitii">Войти</string>
    <string name="change_language">Сменить язык</string>
    <string name="Russia">Русский</string>
    <string name="setting">Настройки уведомлений</string>
    <string name="sett">Уведомлять об изменениях обращений</string>
    <string name="set">Уведомлять о новых версиях приложения</string>
    <string name="delete">Удалить аккаунт</string>
    <string name="Gul">Gul-Piyaz</string>
    <string name="Gul_email">gul_piyaz@gmail.com</string>
    <string name="Gul_number">+996777 777 777</string>
    <string name="Gul_date">7/7/1977</string>
    <string name="ready">Готово</string>
    <string name="date">06.11.2021</string>
    <string name="add">+</string>
    <string name="change">Редактировать</string>
    <string name="time_of_work">Сегодня 08:00 - 17:00</string>
    <string name="time_for_lunch">Обед 12:00 - 13:00 прием граждан: пн-пт 13:00-17:00</string>
    <string name="adres">10-й микрорайон, 35</string>
    <string name="mail">720023, Бишкек, 10 м-н 3 этажа</string>
    <string name="websites">bishkeksuukanal.kg</string>
    <string name="number_of_organization">+996777 777 777</string>
    <string name="sended_17_17">Отправлен сегодня в 17:17</string>
    <string name="text_obrasheniya">Текст обращения</string>
    <string name="open_with">Открыть с помощью</string>
    <string name="google_maps">Google maps</string>
    <string name="_2_gis">2GIS</string>
    <string name="vodokanal">Водоканал</string>
    <string name="tazalyk">МП Тазалык</string>
    <string name="bishkeksvet">Бишкексвет</string>
    <string name="selenhoz">Селенхоз</string>

</resources>