<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/main_liner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toStartOf="@+id/textview17"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="210dp"
                android:layout_height="50dp"
                android:text="@string/My_massages"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView8"
            android:layout_width="370dp"
            android:layout_height="200dp"
            android:layout_weight="10"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/imageView52"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                app:srcCompat="@drawable/street" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="370dp"
            android:layout_height="310dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout15"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout10"
            app:layout_constraintStart_toStartOf="@+id/linearLayout10"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="310dp"
                app:cardCornerRadius="30dp">

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/names" />

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="70dp"
                    android:text="@string/In_process" />

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="140dp"
                    android:text="@string/sended_17_17" />

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="210dp"
                    android:text="@string/Adress" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView10"
            android:layout_width="368dp"
            android:layout_height="188dp"
            app:cardCornerRadius="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout13"
            app:layout_constraintStart_toStartOf="@+id/linearLayout13"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

            <TextView
                android:id="@+id/textView"
                android:layout_width="347dp"
                android:layout_height="168dp"
                android:layout_margin="10dp"
                android:text="@string/text_obrasheniya"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>