<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="372dp"
        android:layout_height="184dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView8">

        <TextView
            android:id="@+id/textView"
            android:layout_width="299dp"
            android:layout_height="168dp"
            android:layout_margin="10dp"
            android:text="@string/send_message"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="315dp"
            android:layout_marginVertical="130dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="519dp">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="50dp">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="40dp"
                    android:layout_height="41dp"
                    app:srcCompat="@drawable/camera"
                    tools:layout_editor_absoluteX="85dp"
                    tools:layout_editor_absoluteY="616dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="271dp"
        android:layout_height="57dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="56dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/back"
            app:tint="#FFFFFF"/>

        <TextView
            android:layout_width="219dp"
            android:layout_height="50dp"
            android:text="@string/massage"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="366dp"
        android:layout_height="69dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#80FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView7"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="366dp"
        android:layout_height="69dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#80FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/Adress"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="@+id/cardView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Open_map"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cardView6"
        app:layout_constraintEnd_toEndOf="@+id/cardView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/House_Number"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cardView7"
        app:layout_constraintStart_toStartOf="@+id/cardView7" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="371dp"
        android:layout_height="176dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="371dp"
            android:layout_height="202dp"
            app:srcCompat="@drawable/_111111111" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="56dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView7"
        app:layout_constraintStart_toStartOf="@+id/cardView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:text="@string/send_message"
            android:textColor="@color/blue"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="654dp" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>