<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:background="@color/maincolor">

    <LinearLayout
        android:id="@+id/main_liner2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/backk"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toStartOf="@+id/textview17"
                android:layout_marginEnd="350dp"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear1">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="70dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:srcCompat="@drawable/component_28__1_" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/liner_image"
            android:layout_marginTop="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="347dp"
                android:layout_height="70dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/name"
                    android:inputType="textMultiLine"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="347dp"
                android:layout_height="70dp"
                android:layout_marginTop="27dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/Email"
                    android:inputType="textMultiLine"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="347dp"
                android:layout_height="70dp"
                android:layout_marginTop="27dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/Number"
                    android:inputType="textMultiLine"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="347dp"
                android:layout_height="70dp"
                android:layout_marginTop="27dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/date_of_birth"
                    android:inputType="textMultiLine"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="20dp">

                <Button
                    android:id="@+id/gotovo"
                    android:layout_width="210dp"
                    android:layout_height="55dp"
                    android:background="@color/black21"
                    android:text="@string/ready"
                    android:textColor="@color/blue2"
                    android:textSize="18sp">
                </Button>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>